--- a/freemarkertool-web/pom.xml
+++ b/freemarkertool-web/pom.xml
@@ -132,7 +132,19 @@
       <groupId>com.google.inject.servlet</groupId>
       <artifactId>guice-servlet</artifactId>
       <version>1.0.1-SNAPSHOT</version>
-    </dependency>   
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>1.1.2</version>
+    </dependency>
 
     <dependency>
       <groupId>com.blueskyminds.housepad</groupId>
