--- a/freemarkertool-web/pom.xml
+++ b/freemarkertool-web/pom.xml
@@ -134,16 +134,28 @@
       <version>1.0.1-SNAPSHOT</version>
     </dependency>
 
+    <!--<dependency>-->
+      <!--<groupId>javax.servlet</groupId>-->
+      <!--<artifactId>jstl</artifactId>-->
+      <!--<version>1.1.2</version>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+      <!--<groupId>taglibs</groupId>-->
+      <!--<artifactId>standard</artifactId>-->
+      <!--<version>1.1.2</version>-->
+    <!--</dependency>-->
+
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.1.2</version>
+      <groupId>com.thoughtworks.xstream</groupId>
+      <artifactId>xstream</artifactId>
+      <version>1.2.2</version>
     </dependency>
 
     <dependency>
-      <groupId>taglibs</groupId>
-      <artifactId>standard</artifactId>
-      <version>1.1.2</version>
+      <groupId>xpp3</groupId>
+      <artifactId>xpp3_min</artifactId>
+      <version>1.1.3.4.O</version>
     </dependency>
 
     <dependency>
