--- a/freemarkertool-web/src/main/webapp/WEB-INF/web.xml
+++ b/freemarkertool-web/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,14 @@
     <listener-class>org.apache.struts2.tiles.StrutsTilesListener</listener-class>
   </listener>
 
+    <!-- Setup the reference to a JavaMail session-->
+  <resource-ref>
+    <description>A JavaMail session</description>
+    <res-ref-name>mail/MyMailSession</res-ref-name>
+    <res-type>javax.mail.Session</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
+
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
